--- a/wiki/CarcodeVision.wiki
+++ b/wiki/CarcodeVision.wiki
@@ -1,4 +1,4 @@
-#labels Phase-Requirements
+#labels Phase-Requirements,Featured
 #Vision for carcode.
 
 carcode is intended as a tool for helping beginners learn to program in Python. It simulates a two-dimensional robotic car that you must write programs to control and do simple tasks, such as parking. It can be thought of as an extension of turtle graphics.
