--- a/wiki/CarcodeVision.wiki
+++ b/wiki/CarcodeVision.wiki
@@ -9,10 +9,14 @@ The next features to implement include:
 
   * Add pixel-color sensors to sense that return the color of the pixel they are currently above. These can be used by the car to help steer it automatically, to find yellow lines, etc. [Squeak http://www.squeak.org/] provides something similar (indeed, Squeak could be a good source of ideas for other features to add).
 
+  * Simple crash modeling would fun, i.e. when two solid objects come into contact at least one should be dented or crumple.
+
+  * Create a GUI that makes it easy to select different kinds of backgrounds, customize the details of the car, etc.
+
   * Create a super simple, easy to understand API that can be used by beginners to write cool and interesting programs. It should let the programmer access all the basic car features. Clear and complete documentation is important here.
 
   * Demo programs and tutorials --- suitable for beginners --- need to be written.
 
-  * Graphical extensions, such as more car details (customization?), environmental details such as puddles, oil slicks, pedestrians, lamp posts, other cars, etc. Indeed, many features that you see in other car games or the like could be added, but, ideally, they should all be things that the beginning programmer should be able to understand and interact with via the car they are controlling.
+  * Graphical extensions, such as more car details (customization?), environmental details such as traffic lights, puddles, pedestrians, lamp posts, other cars, etc. Indeed, many features that you see in other car games or the like could be added, but, ideally, they should all be things that the beginning programmer should be able to understand and interact with via the car they are controlling.
 
-  * 2D is nice, but 2.5D (e.g. like [Roller Coaster Tycoon http://www.atari.com/rollercoastertycoon/]) might be an appealing improvement. Possibly full-blown 3D might also be used, but the problem with 3D is that simply navigating and moving around could get in the way and make it less useful as an educational tool. Perhaps [pyglet http://www.pyglet.org/] could be used for this?
+  * 2D is nice, but 2.5D (e.g. like [http://www.atari.com/rollercoastertycoon/ Roller Coaster Tycoon]) might be an appealing improvement. Possibly full-blown 3D might also be used, but the problem with 3D is that simply navigating and moving around could get in the way and make it less useful as an educational tool. Perhaps [pyglet http://www.pyglet.org/] could be used for this?
