--- a/wiki/PixelColorSensors.wiki
+++ b/wiki/PixelColorSensors.wiki
@@ -1,3 +1,4 @@
+#labels Phase-Requirements,Phase-Design
 Pixel color sensors are a simple way for a car to get feedback from the environment.
 
 The basic color sensor returns True if the background pixel that it is currently above matches the color it senses.
