--- a/wiki/CarcodeVision.wiki
+++ b/wiki/CarcodeVision.wiki
@@ -21,4 +21,6 @@ The next features to implement include:
 
   * 2D is nice, but 2.5D (e.g. like [http://www.atari.com/rollercoastertycoon/ Roller Coaster Tycoon]) might be an appealing improvement. Possibly full-blown 3D might also be used, but the problem with 3D is that simply navigating and moving around could get in the way and make it less useful as an educational tool. Perhaps [http://www.pyglet.org/ pyglet] or [http://www.pysoy.org/ PySoy] could be used for this?
 
+  * Make the downloading and installation of carcode as simple, pleasant, and anguish-free as possible. Nothing frustrates beginners more than software that is difficult to even get running. 
+
 NextSteps suggests a slightly more detailed list of things to do.
