Edited wiki page through web user interface.

--- a/wiki/Gsoc2008Status.wiki
+++ b/wiki/Gsoc2008Status.wiki
@@ -3,16 +3,17 @@
 == DONE ==
  * Added common linux package building (RPM, DEB) via distutils
  * Implemented level scrolling [http://clsdaniel.blogspot.com/2008/05/opengl-branch-merged.html (comments)]
+ * Implement color trails (r89)
+ * Add packaging (rpm,deb,py2exe) (r73)
+ * Implement sensors (r77)
 
 ------------------------------------------------------------------------------
 
 == TODO ==
- * Implement color trails
  * Implement car control API
  * Implement sensors to car API
  * Implement event tracking
  * Implement level creation format
  * Create driving tests
  * Add script editor
- * Add packaging 
  * Implement collision detection
