--- a/wiki/Gsoc2008Status.wiki
+++ b/wiki/Gsoc2008Status.wiki
@@ -1,10 +1,9 @@
 #summary Current status of Gsoc2008 branch
 
 == DONE ==
- * Added common linux package building (RPM, DEB) via distutils
+ * Added common linux package building (RPM, DEB) via distutils and py2exe (r73)
  * Implemented level scrolling [http://clsdaniel.blogspot.com/2008/05/opengl-branch-merged.html (comments)]
  * Implement color trails (r89)
- * Add packaging (rpm,deb,py2exe) (r73)
  * Implement sensors (r77)
 
 ------------------------------------------------------------------------------
