Edited wiki page through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -2,18 +2,25 @@
 
 = Latest development screenshots =
 
+[http://img524.imageshack.us/my.php?image=ccshot6wl4.png http://img524.imageshack.us/img524/1241/ccshot6wl4.th.png]
+
+New main menu from v3.0 Alpha 2
+
+[http://img261.imageshack.us/my.php?image=ccshot5no3.png http://img261.imageshack.us/img261/2082/ccshot5no3.th.png]
+
+Parking demo with scoreboard
+
+
+= v3.0 Alpha 1 =
+
 [http://img68.imageshack.us/img68/3720/ccmainmenumc0.png http://img68.imageshack.us/img68/3720/ccmainmenumc0.th.png]
 
 Carcode main menu
 
+[http://img368.imageshack.us/img368/3285/ccshotzi8.png http://img368.imageshack.us/img368/3285/ccshotzi8.th.png]
+
+Tracer lines
 
 [http://img370.imageshack.us/img370/4927/ccfiledialogrh2.png http://img370.imageshack.us/img370/4927/ccfiledialogrh2.th.png]
 
 Carcode File Dialog to open script files
-
-
-= Carcode in action =
-
-[http://img368.imageshack.us/img368/3285/ccshotzi8.png http://img368.imageshack.us/img368/3285/ccshotzi8.th.png]
-
-Tracer lines
