Edited wiki page through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -6,6 +6,10 @@
 
 New main menu from v3.0 Alpha 2
 
+[http://img168.imageshack.us/my.php?image=ccshot7lp9.png http://img168.imageshack.us/img168/6334/ccshot7lp9.th.png]
+
+Parking demo with objectives list
+
 [http://img261.imageshack.us/my.php?image=ccshot5no3.png http://img261.imageshack.us/img261/2082/ccshot5no3.th.png]
 
 Parking demo with scoreboard
