--- a/wiki/Gsoc2008Status.wiki
+++ b/wiki/Gsoc2008Status.wiki
@@ -9,10 +9,10 @@
  * Implement car control API (r101)
  * Implement sensors to car API (r102)
  * Implement level creation format (r71, r103)
+ * Implement event tracking (r235, r253)
 
 ------------------------------------------------------------------------------
 
 == TODO ==
- * Implement event tracking
  * Create driving tests
  * Add script editor
