--- a/wiki/ReleaseChecklist.wiki
+++ b/wiki/ReleaseChecklist.wiki
@@ -1,3 +1,4 @@
+#labels Phase-Deploy
 When creating a new release for carcode, please follow these steps.
 
 
@@ -17,4 +18,3 @@ If the release version name is, say, carcode_v3.7_beta19, then copy it to the SV
 == Step 3: Add a version tag labs to the issue tracker and wiki web == 
 
 This way we can tag issues and documentation to specific versions. New labels  can be added via the admin interface http://code.google.com/p/carcode/adminIssues
-
