--- a/wiki/ReleaseChecklist.wiki
+++ b/wiki/ReleaseChecklist.wiki
@@ -15,6 +15,13 @@ For example, the first two alpha releases of carcode 3.0 were named like this:
 
 If the release version name is, say, carcode_v3.7_beta19, then copy it to the SVN folder `tags/carcode_v3.7_beta19`. Thus we will have a history of all releases.
 
+For example, if we had our main code in `trunk/carcode3` and we decide to do the release v3.1 alpha 1, we create a tag with the following subversion command:
+
+{{{
+svn copy https://carcode.googlecode.com/svn/trunk/carcode3 https://carcode.googlecode.com/svn/tags/carcode_v3.1_alpha1
+}}}
+
+
 == Step 3: Add a version tag labs to the issue tracker and wiki web == 
 
 This way we can tag issues and documentation to specific versions. New labels  can be added via the admin interface http://code.google.com/p/carcode/adminIssues
