Edited wiki page through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -3,6 +3,21 @@
 
 = Latest development screenshots =
 
+[http://img99.imageshack.us/my.php?image=ccshot8zh3.png http://img99.imageshack.us/img99/3830/ccshot8zh3.th.png]
+
+New script editor from v3.0 Beta 1
+
+[http://img139.imageshack.us/my.php?image=ccshot9gq7.png http://img139.imageshack.us/img139/1351/ccshot9gq7.th.png]
+
+New level selector from v3.0 Beta 1
+
+[http://img99.imageshack.us/my.php?image=ccshot10nz8.png http://img99.imageshack.us/img99/54/ccshot10nz8.th.png]
+
+Carcode v3.0 Beta 1 Level (02)
+
+
+= v3.0 Alpha 2 =
+
 [http://img524.imageshack.us/my.php?image=ccshot6wl4.png http://img524.imageshack.us/img524/1241/ccshot6wl4.th.png]
 
 New main menu from v3.0 Alpha 2
